--- a/dist.ini
+++ b/dist.ini
@@ -40,3 +40,11 @@ copyright_year   = 2025
 [Git::Commit]
 [Git::Tag]
 [Git::Push]
+
+[SecurityPolicy]
+-policy = Individual
+-filename = SECURITY.md
+timeframe = 7 days
+url = https://github.com/CPAN-Security/Dist-Zilla-Plugin-SecurityPolicy/blob/HEAD/SECURITY.md
+[CopyFilesFromBuild]
+copy = SECURITY.md
