Add SECURITY.md to the repository

--- a/dist.ini
+++ b/dist.ini
@@ -40,3 +40,11 @@ copyright_year   = 2025
 [Git::Commit]
 [Git::Tag]
 [Git::Push]
+
+[SecurityPolicy]
+-policy = Individual
+-auto_url = 1
+-filename = SECURITY.md
+timeframe = 7 days
+[CopyFilesFromBuild]
+copy = SECURITY.md
