Make security url explicit for now

--- a/dist.ini
+++ b/dist.ini
@@ -43,8 +43,8 @@ copyright_year   = 2025
 
 [SecurityPolicy]
 -policy = Individual
--auto_url = 1
 -filename = SECURITY.md
 timeframe = 7 days
+url = https://github.com/CPAN-Security/Dist-Zilla-Plugin-SecurityPolicy/blob/HEAD/SECURITY.md
 [CopyFilesFromBuild]
 copy = SECURITY.md
